--- a/demo.html
+++ b/demo.html
@@ -18,6 +18,93 @@
         </style>
     </head>
     <body>
+   <h1>Title 01 Heading</h1>
+      <hr />
+      <h2>Level 02 Heading</h2>
+      <p>Lorem ipsum <em>emphasised text</em> dolor sit amet, <strong>strong text</strong> 
+      consectetur adipisicing elit, <abbr title="">abbreviated text</abbr> sed do eiusmod tempor 
+       incididunt ut labore et dolore magna aliqua. Ut 
+      <q>quoted text</q> enim ad minim veniam, quis nostrud exercitation <a href="/">link text</a> 
+      ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
+      <ins>inserted text</ins> irure dolor in reprehenderit in voluptate velit esse cillum 
+      dolore eu fugiat nulla pariatur. Excepteur sint occaecat <code>code text</code> cupidatat 
+      non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <p>
+      Suspendisse rhoncus, est ac sollicitudin viverra, leo orci sagittis massa, sed condimentum <acronym title="">acronym text</acronym> est tortor a lectus. Curabitur porta feugiat ullamcorper. Integer lacinia mi id odio faucibus eget tincidunt nisl iaculis. Nam adipiscing hendrerit turpis, et porttitor felis sollicitudin et. Donec dictum massa ac neque accumsan tempor. Cras aliquam, ipsum sit amet laoreet hendrerit, purus <del>deleted text</del> sapien convallis dui, et porta leo ipsum ac nunc. Nullam ornare porta dui ac semper. Cras aliquam laoreet hendrerit. Quisque vulputate dolor eget mi porta vel porta nisl pretium. Vivamus non leo magna, quis imperdiet risus. Morbi tempor risus placerat tellus imperdiet fringilla. 
+      </p>
+
+      <blockquote>
+      <p>I am not one who was born in the possession of knowledge; I am one who is fond of antiquity, and earnest in seeking it there.</p>
+      </blockquote>
+
+      <p><cite><a href="/">Confucius, The Confucian Analects</a></cite>,  (551 BC - 479 BC)</p>
+
+      <h3>Level 03 Heading</h3>
+
+      <p>Extended paragraph. <a href="">Lorem ipsum</a> dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+      exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <ol>
+      <li>Unus</li>
+      <li>Duo</li>
+      <li>Tres</li>
+      <li>Quattuor</li>
+      </ol>
+
+      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+      anim id est laborum.</p>
+
+      <h3>Header 3</h3>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+      ut labore et dolore magna aliqua.</p>
+
+       <h4>Unordered lists</h4>
+            <ul>
+              <li>Lorem ipsum dolor sit amet</li>
+              <li>Consectetur adipisicing elit</li>
+              <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+              <li>Ut enim ad minim veniam</li>
+            </ul>
+      <p>Lorem ipsum dolor sit amet,consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+      ut labore et dolore magna aliqua.</p>
+
+      <pre><code>body {
+    font:0.8125em/1.618 Arial, sans-serif; 
+    background-color:#fff;  
+    color:#111;
+}</code></pre>
+
+      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+      anim id est laborum.</p>
+
+      <h4>Header 4</h4>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+      ut labore et dolore magna aliqua.</p>
+
+      <dl>
+      <dt>Definition list</dt>
+      <dd>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
+      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+      commodo consequat.</dd>
+      <dt>Lorem ipsum dolor sit amet</dt>
+      <dd>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
+      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+      commodo consequat.</dd>
+
+      </dl>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+      ut labore et dolore magna aliqua.</p>
+
+
         <header>
             <hgroup>
                 <h1>Grouped Heading 1</h1>
@@ -168,7 +255,7 @@
             <dd>Description value</dd>
         </dl>
         
-        <h3>figure</h3>
+        <h1>figure</h1>
 
         <figure>
             <img src="http://placekitten.com/400/200" alt="">
@@ -186,13 +273,6 @@
                     <th>Price</th>
                 </tr>
             </thead>
-            <tfoot>
-                <tr>
-                    <th>Album</th>
-                    <th>Year</th>
-                    <th>Price</th>
-                </tr>
-            </tfoot>
             <tbody>
                 <tr>
                     <td>Are You Experienced</td>
