--- a/demo.html
+++ b/demo.html
@@ -25,11 +25,13 @@
       <p>Lorem ipsum <em>emphasised text</em> dolor sit amet, <strong>strong text</strong> 
       consectetur adipisicing elit, <abbr title="">abbreviated text</abbr> sed do eiusmod tempor 
        incididunt ut labore et dolore magna aliqua. Ut 
-      <q>quoted text</q> enim ad minim veniam, quis nostrud exercitation <a href="/">link text</a> 
+      <q>quoted text</q> enim ad minim veniam, quis nostrud exercitation <a href="/">link text</a>
       ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
       <ins>inserted text</ins> irure dolor in reprehenderit in voluptate velit esse cillum 
-      dolore eu fugiat nulla pariatur. Excepteur sint occaecat <code>code text</code> cupidatat 
-      non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+dolore eu fugiat nulla pariatur. Excepteur sint occaecat <code>code text</code> cupidatat 
+      non proident, sunt in culpa qui officia deserunt mollit anim id
+est laborum. </p>
 
       <p>
       Suspendisse rhoncus, est ac sollicitudin viverra, leo orci sagittis massa, sed condimentum <acronym title="">acronym text</acronym> est tortor a lectus. Curabitur porta feugiat ullamcorper. Integer lacinia mi id odio faucibus eget tincidunt nisl iaculis. Nam adipiscing hendrerit turpis, et porttitor felis sollicitudin et. Donec dictum massa ac neque accumsan tempor. Cras aliquam, ipsum sit amet laoreet hendrerit, purus <del>deleted text</del> sapien convallis dui, et porta leo ipsum ac nunc. Nullam ornare porta dui ac semper. Cras aliquam laoreet hendrerit. Quisque vulputate dolor eget mi porta vel porta nisl pretium. Vivamus non leo magna, quis imperdiet risus. Morbi tempor risus placerat tellus imperdiet fringilla. 
