--- a/demo.html
+++ b/demo.html
@@ -152,10 +152,7 @@ est laborum. </p>
       <hr />
 
         <header>
-            <hgroup>
-                <h1>Grouped Heading 1</h1>
-                <h2>Grouped Heading 2</h2>
-            </hgroup>
+            <h1>Heading 1</h1>
             <nav>
                 <ul>
                     <li><a href="#">navigation item #1</a></li>
